@@ -57,7 +57,7 @@ baseline functionality:
   <li>Feedspace, feedtree, or low latency purpose built syndication</li>
   <li>Email (post through SMTP/mixmaster/mixminion, read from procmail)</li>
  </ul></li>
- <li>Full text search with <a href="http://lucene.org/>">Lucene</a> integration</li>
+ <li>Full text search with <a href="http://lucene.org/">Lucene</a> integration</li>
  <li><a href="http://www.hsqldb.org/">HSQLDB</a> full database encryption
      (logs, data, backup, scripts, etc)</li>
  <li>Archive management heuristics</li>
